# Reporter

./: CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
Reporter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
example/: example_report.ipynb
reporter/converter/: html2docx.py  markdown2pdf.py
reporter/templates/all_templates/: model_report_1.md  model_report_2.md
reporter/templates/base/: base.md  reproduce.md  table.md  title.md
reporter/templates/base/metrics/: AP.md
requirements/: requirements-format.txt  requirements-lint.txt  requirements-test.txt  requirements.txt
tests/: test_fieldnet_report.py
tests/files/: test_config.yml  test_model.md
