[egg_info]
tag_build =
tag_date = 0

[metadata]
name = reporter
description-file = README.md


[options]
setup_requires = setuptools_scm


[flake8]
max_line_length = 100
max_methods = 15
max_imports = 15
max_arguments = 10
max_attributes = 10
show-source = True
max_module_members = 10

ignore =
    C101,
    C408,
    D,
    DAR101,
    EXE002,
    F401,
    F403,
    I002,
    I104,
    Q000,
    RST301,
    WPS110,
    WPS111,
    WPS112,
    WPS115,
    WPS201,
    WPS210,
    WPS221,
    WPS229,
    WPS300,
    WPS305,
    WPS306,
    WPS323,
    WPS326,
    WPS329,
    WPS347,
    WPS410,
    WPS412,
    WPS430,
    WPS440,
    WPS529,
    WPS602